tests/sksl/errors/ModifiersInStruct.dsl.glsl
### Compilation failed:

error: expected a type, but found '}'
error: expected a type, but found 'const'

2 errors
